BocAutoCompleteReferenceValue: Fixed issue with vertical scrollbar being always visible in quirks-mode. (RM-2834)
git-svn-id: https://svn.re-motion.org/svn/Remotion/trunk@17448 cb0deee2-328e-b949-94ea-fb3139fab790

--- a/Remotion/ObjectBinding/Web.Legacy/Res/HTML/BocAutoCompleteReferenceValue.jquery.css
+++ b/Remotion/ObjectBinding/Web.Legacy/Res/HTML/BocAutoCompleteReferenceValue.jquery.css
@@ -3,13 +3,16 @@
 	padding: 0px;
 	border: 1px solid black;
 	background-color: white;
-	overflow: hidden;
+  overflow: hidden;
+	/* overflow-y is overridden by javascript. */
+	/*
 	overflow-y: auto;
+  */
 	z-index: 99999;
 }
 
 .ac_results ul {
-	width: 100%;
+	width: 100%;	
 	list-style-position: outside;
 	list-style: none;
 	padding: 0;
